# cs521_mp1

./: .gitignore  CMakeCache.txt
cpu/: CMakeLists.txt  gemm_cpu.cpp
gpu/: CMakeLists.txt  gemm_gpu.cu
npu/: conv_npu.py  test_harness.py
report/: mp1-report-structure.docx
